--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-database:16.0.6'
 
-    //implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    //implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //compile 'com.squareup.picasso:picasso:2.5.2'
 
     apply plugin: 'com.google.gms.google-services'
 
